--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -263,14 +263,14 @@
 
                                             <h3 className="text-lg font-semibold mt-4">Highest Engagement Post</h3>
                                             <a href={instagramDataLeft.highest_engagement_post.href} target="_blank" rel="noopener noreferrer" class="text-blue-500 underline">View Post</a>
-                                            <iframe
+                                            {/*<iframe
                                                 src={`${instagramDataLeft.highest_engagement_post.href}`}
                                                 width="320"
                                                 height="440"
                                                 frameborder="0"
                                                 scrolling="no"
                                                 allowtransparency="true"
-                                            ></iframe>
+                                            ></iframe>*/}
 
 
                                             <p>Likes: {instagramDataLeft.highest_engagement_post.likes}</p>
